# nexus_gate

./: .env.example  .gitignore  .htaccess  CHANGELOG.md  Dockerfile  LICENSE  README.md  config.example.toml  docker-compose.prod.yml  docker-compose.yml  fix_imports.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt
benches/: .env.example  bench_db.py  bench_fs.py
docs/: API.md  ARCHITECTURE.md  CONFIG.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  FEDERATION.md  MCP.md  SECURITY.md  WEBHOOKS.md
how_to_use/: admin_test.js  drop_tables.js  fetch_databases.js  send_data.js  upload.js  webhokk_tool.js
src/: __init__.py  main.py  passenger_wsgi.py
src/api/: errors.py  responses.py
src/api/admin/: handlers.py
src/api/core/: __init__.py  health.py  metrics.py
src/api/database/: filter_builder.py  handlers.py  query_parser.py  (+2 more)
src/cache/: __init__.py  memory.py  redis_backend.py  sqlite_backend.py
src/config/: __init__.py  defaults.py  loader.py  schema.py
src/db/: __init__.py  pool.py
src/graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
src/logger/: __init__.py  rotator.py  setup.py
src/logging/: __init__.py  setup.py
src/security/: __init__.py  ban_list.py  circuit_breaker.py  storage.py
src/server/: app.py  lifespan.py
src/utils/: __init__.py  size_parser.py  types.py  uuid7.py
src/webhook/: __init__.py  dispatcher.py  emitter.py  signer.py
tests/: conftest.py
tests/integration/: test_admin.py  test_auth.py  test_db.py  test_fs.py  test_webhooks.py
tests/unit/: test_auth.py  test_config.py  test_filter_builder.py
(+46 files in other folders)
